// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TranslatorTab finds email translations 1`] = `
<body>
  <div>
    <div
      class=""
    >
      <div
        class="translations pop_wrapper pop_wrapper pop_invisible"
        style="right: -260px; top: 120px;"
      >
        <div
          class="tab_wrapper"
        >
          <div
            class="tab"
            style="background: rgb(119, 119, 119);"
          >
            <div
              class="icon"
            >
              <temba-icon
                name="language"
                size="1.7"
              />
            </div>
            <div
              class="label"
            >
              Flow Translation
            </div>
          </div>
        </div>
        <div
          class="popped popped "
          style="border-color: #777; top: 100px; right: 0px;"
        >
          <div
            class="header"
            style="background: rgb(119, 119, 119);"
          >
            <div
              class="close"
            >
              <temba-icon
                name="close"
              />
            </div>
            <div
              class="header_label"
            >
              Spanish
            </div>
          </div>
          <div
            class="body"
            style="background: rgb(119, 119, 119);"
          >
            <div
              class="translations_wrapper"
            >
              <div
                class="translate_block"
              >
                <div
                  class="needs_translation"
                >
                  <div
                    class="type_name"
                  >
                    Send Email
                  </div>
                  <div
                    class="item"
                  >
                    <div
                      class="text from_text"
                    >
                      Urgent!
                    </div>
                    <div
                      class="text attribute"
                    >
                      Subject
                    </div>
                  </div>
                  <div
                    class="item"
                  >
                    <div
                      class="text from_text"
                    >
                      I need this yesterday
                    </div>
                    <div
                      class="text attribute"
                    >
                      Body
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="options"
            >
              <div
                class="header"
              >
                <div
                  class="progress_bar"
                >
                  <div
                    class="filled"
                    style="width: 0%;"
                  />
                </div>
                <div
                  class="toggle"
                >
                  <temba-icon
                    name="up"
                  />
                </div>
              </div>
              <div
                class="filters"
              >
                <div
                  class="checkboxes"
                >
                  <div>
                    <temba-checkbox
                      checked="true"
                      label="Include categories"
                    />
                  </div>
                </div>
                <div
                  class="pct_complete"
                >
                  0
                  %
                </div>
              </div>
              <div
                class="buttons"
              >
                <button
                  class=""
                >
                  Auto Translate
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <temba-dialog
        header="Auto Translation"
        id="auto-translate"
      >
        <div
          class="p-6"
        >
          <div>
            This feature requires an AI model to be configured for your workspace to continue.
          </div>
        </div>
      </temba-dialog>
    </div>
  </div>
</body>
`;

exports[`TranslatorTab finds message translations 1`] = `
<body>
  <div>
    <div
      class=""
    >
      <div
        class="translations pop_wrapper pop_wrapper pop_invisible"
        style="right: -260px; top: 120px;"
      >
        <div
          class="tab_wrapper"
        >
          <div
            class="tab"
            style="background: rgb(119, 119, 119);"
          >
            <div
              class="icon"
            >
              <temba-icon
                name="language"
                size="1.7"
              />
            </div>
            <div
              class="label"
            >
              Flow Translation
            </div>
          </div>
        </div>
        <div
          class="popped popped "
          style="border-color: #777; top: 100px; right: 0px;"
        >
          <div
            class="header"
            style="background: rgb(119, 119, 119);"
          >
            <div
              class="close"
            >
              <temba-icon
                name="close"
              />
            </div>
            <div
              class="header_label"
            >
              Spanish
            </div>
          </div>
          <div
            class="body"
            style="background: rgb(119, 119, 119);"
          >
            <div
              class="translations_wrapper"
            >
              <div
                class="translate_block"
              >
                <div
                  class="needs_translation"
                >
                  <div
                    class="type_name"
                  >
                    Send Message
                  </div>
                  <div
                    class="item"
                  >
                    <div
                      class="text from_text"
                    >
                      Hello World!
                    </div>
                    <div
                      class="text attribute"
                    >
                      Message
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="options"
            >
              <div
                class="header"
              >
                <div
                  class="progress_bar"
                >
                  <div
                    class="filled"
                    style="width: 0%;"
                  />
                </div>
                <div
                  class="toggle"
                >
                  <temba-icon
                    name="up"
                  />
                </div>
              </div>
              <div
                class="filters"
              >
                <div
                  class="checkboxes"
                >
                  <div>
                    <temba-checkbox
                      checked="true"
                      label="Include categories"
                    />
                  </div>
                </div>
                <div
                  class="pct_complete"
                >
                  0
                  %
                </div>
              </div>
              <div
                class="buttons"
              >
                <button
                  class=""
                >
                  Auto Translate
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <temba-dialog
        header="Auto Translation"
        id="auto-translate"
      >
        <div
          class="p-6"
        >
          <div>
            This feature requires an AI model to be configured for your workspace to continue.
          </div>
        </div>
      </temba-dialog>
    </div>
  </div>
</body>
`;

exports[`TranslatorTab finds split translations 1`] = `
<body>
  <div>
    <div
      class=""
    >
      <div
        class="translations pop_wrapper pop_wrapper pop_invisible"
        style="right: -260px; top: 120px;"
      >
        <div
          class="tab_wrapper"
        >
          <div
            class="tab"
            style="background: rgb(119, 119, 119);"
          >
            <div
              class="icon"
            >
              <temba-icon
                name="language"
                size="1.7"
              />
            </div>
            <div
              class="label"
            >
              Flow Translation
            </div>
          </div>
        </div>
        <div
          class="popped popped "
          style="border-color: #777; top: 100px; right: 0px;"
        >
          <div
            class="header"
            style="background: rgb(119, 119, 119);"
          >
            <div
              class="close"
            >
              <temba-icon
                name="close"
              />
            </div>
            <div
              class="header_label"
            >
              Spanish
            </div>
          </div>
          <div
            class="body"
            style="background: rgb(119, 119, 119);"
          >
            <div
              class="translations_wrapper"
            >
              <div
                class="translate_block"
              >
                <div
                  class="needs_translation"
                >
                  <div
                    class="type_name"
                  >
                    Wait for Response
                  </div>
                  <div
                    class="item"
                  >
                    <div
                      class="text from_text"
                    >
                      Red, Green, Blue, Other
                    </div>
                    <div
                      class="text attribute"
                    >
                      Categories
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="options"
            >
              <div
                class="header"
              >
                <div
                  class="progress_bar"
                >
                  <div
                    class="filled"
                    style="width: 0%;"
                  />
                </div>
                <div
                  class="toggle"
                >
                  <temba-icon
                    name="up"
                  />
                </div>
              </div>
              <div
                class="filters"
              >
                <div
                  class="checkboxes"
                >
                  <div>
                    <temba-checkbox
                      checked="true"
                      label="Include categories"
                    />
                  </div>
                </div>
                <div
                  class="pct_complete"
                >
                  0
                  %
                </div>
              </div>
              <div
                class="buttons"
              >
                <button
                  class=""
                >
                  Auto Translate
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <temba-dialog
        header="Auto Translation"
        id="auto-translate"
      >
        <div
          class="p-6"
        >
          <div>
            This feature requires an AI model to be configured for your workspace to continue.
          </div>
        </div>
      </temba-dialog>
    </div>
  </div>
</body>
`;

exports[`TranslatorTab handles partial category translation 1`] = `
<body>
  <div>
    <div
      class=""
    >
      <div
        class="translations pop_wrapper pop_wrapper pop_invisible"
        style="right: -260px; top: 120px;"
      >
        <div
          class="tab_wrapper"
        >
          <div
            class="tab"
            style="background: rgb(119, 119, 119);"
          >
            <div
              class="icon"
            >
              <temba-icon
                name="language"
                size="1.7"
              />
            </div>
            <div
              class="label"
            >
              Flow Translation
            </div>
          </div>
        </div>
        <div
          class="popped popped "
          style="border-color: #777; top: 100px; right: 0px;"
        >
          <div
            class="header"
            style="background: rgb(119, 119, 119);"
          >
            <div
              class="close"
            >
              <temba-icon
                name="close"
              />
            </div>
            <div
              class="header_label"
            >
              Spanish
            </div>
          </div>
          <div
            class="body"
            style="background: rgb(119, 119, 119);"
          >
            <div
              class="translations_wrapper"
            >
              <div
                class="translate_block"
              >
                <div
                  class="needs_translation"
                >
                  <div
                    class="type_name"
                  >
                    Wait for Response
                  </div>
                  <div
                    class="item"
                  >
                    <div
                      class="text from_text"
                    >
                      Blue, Other
                    </div>
                    <div
                      class="text attribute"
                    >
                      Categories
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="options"
            >
              <div
                class="header"
              >
                <div
                  class="progress_bar"
                >
                  <div
                    class="filled"
                    style="width: 50%;"
                  />
                </div>
                <div
                  class="toggle"
                >
                  <temba-icon
                    name="up"
                  />
                </div>
              </div>
              <div
                class="filters"
              >
                <div
                  class="checkboxes"
                >
                  <div>
                    <temba-checkbox
                      checked="true"
                      label="Include categories"
                    />
                  </div>
                </div>
                <div
                  class="pct_complete"
                >
                  50
                  %
                </div>
              </div>
              <div
                class="buttons"
              >
                <button
                  class=""
                >
                  Auto Translate
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <temba-dialog
        header="Auto Translation"
        id="auto-translate"
      >
        <div
          class="p-6"
        >
          <div>
            This feature requires an AI model to be configured for your workspace to continue.
          </div>
        </div>
      </temba-dialog>
    </div>
  </div>
</body>
`;

exports[`TranslatorTab hides completed translations 1`] = `
<body>
  <div>
    <div
      class=""
    >
      <div
        class="translations pop_wrapper pop_wrapper pop_invisible"
        style="right: -260px; top: 120px;"
      >
        <div
          class="tab_wrapper"
        >
          <div
            class="tab"
            style="background: rgb(119, 119, 119);"
          >
            <div
              class="icon"
            >
              <temba-icon
                name="language"
                size="1.7"
              />
            </div>
            <div
              class="label"
            >
              Flow Translation
            </div>
          </div>
        </div>
        <div
          class="popped popped "
          style="border-color: #777; top: 100px; right: 0px;"
        >
          <div
            class="header"
            style="background: rgb(119, 119, 119);"
          >
            <div
              class="close"
            >
              <temba-icon
                name="close"
              />
            </div>
            <div
              class="header_label"
            >
              Spanish
            </div>
          </div>
          <div
            class="body"
            style="background: rgb(119, 119, 119);"
          >
            <div
              class="translations_wrapper complete"
            />
            <div
              class="options"
            >
              <div
                class="header"
              >
                <div
                  class="progress_bar"
                >
                  <div
                    class="filled hundredpct"
                    style="width: 100%;"
                  />
                </div>
                <div
                  class="toggle"
                >
                  <temba-icon
                    name="up"
                  />
                </div>
              </div>
              <div
                class="filters"
              >
                <div
                  class="checkboxes"
                >
                  <div>
                    <temba-checkbox
                      checked="true"
                      label="Include categories"
                    />
                  </div>
                </div>
                <div
                  class="pct_complete"
                >
                  100
                  %
                </div>
              </div>
              <div
                class="buttons"
              />
            </div>
          </div>
        </div>
      </div>
      <temba-dialog
        header="Auto Translation"
        id="auto-translate"
      >
        <div
          class="p-6"
        >
          <div>
            This feature requires an AI model to be configured for your workspace to continue.
          </div>
        </div>
      </temba-dialog>
    </div>
  </div>
</body>
`;

exports[`TranslatorTab renders 1`] = `
<body>
  <div>
    <div
      class=""
    >
      <div
        class="translations pop_wrapper pop_wrapper pop_invisible"
        style="right: -260px; top: 120px;"
      >
        <div
          class="tab_wrapper"
        >
          <div
            class="tab"
            style="background: rgb(119, 119, 119);"
          >
            <div
              class="icon"
            >
              <temba-icon
                name="language"
                size="1.7"
              />
            </div>
            <div
              class="label"
            >
              Flow Translation
            </div>
          </div>
        </div>
        <div
          class="popped popped "
          style="border-color: #777; top: 100px; right: 0px;"
        >
          <div
            class="header"
            style="background: rgb(119, 119, 119);"
          >
            <div
              class="close"
            >
              <temba-icon
                name="close"
              />
            </div>
            <div
              class="header_label"
            >
              Spanish
            </div>
          </div>
          <div
            class="body"
            style="background: rgb(119, 119, 119);"
          >
            <div
              class="translations_wrapper complete"
            />
            <div
              class="options"
            >
              <div
                class="header"
              >
                <div
                  class="progress_bar"
                >
                  <div
                    class="filled"
                    style="width: 0%;"
                  />
                </div>
                <div
                  class="toggle"
                >
                  <temba-icon
                    name="up"
                  />
                </div>
              </div>
              <div
                class="filters"
              >
                <div
                  class="checkboxes"
                >
                  <div>
                    <temba-checkbox
                      checked="true"
                      label="Include categories"
                    />
                  </div>
                </div>
                <div
                  class="pct_complete"
                >
                  0
                  %
                </div>
              </div>
              <div
                class="buttons"
              />
            </div>
          </div>
        </div>
      </div>
      <temba-dialog
        header="Auto Translation"
        id="auto-translate"
      >
        <div
          class="p-6"
        >
          <div>
            This feature requires an AI model to be configured for your workspace to continue.
          </div>
        </div>
      </temba-dialog>
    </div>
  </div>
</body>
`;
